
Change Log Update (00.00.19)
* 2016-03-21
+ Rename MenuManager to StateManager to reflect what it does.
+ Removed unused or old files
+ Working on Logon Module for initial login process, also testing yaml for login prompts.

Change Log Update (00.00.18)
* 2016-03-18
+ Remove Initial Stub for Language File
  Change this to Prompts_Dao, Moved to Data Folder, working on reading the OBV/2 
  Language file for prompts so I can convert this to an easier format to work
  With, later on will write an update for existing prompts.

Change Log Update (00.00.17)
* 2016-03-17
+ Added popping modules off stack when menu system is closed down!
+ Added new shutdown state cleaning in the Session Destructor to make sure the 
  Menu System and all active modules are shutdown per RAII properly.
+ Update Module Login to pass Instantiate SessionIO class for handle key input

Change Log Update (00.00.16)
* 2016-03-17
+ Created new Mods Sub folder to store system modules
  All modules will be containers of system functions like mod_login for login procedures
  mod_messages for message, mod_files for files, mod_bbslist etc.. 
  Each module will contain it's own asynchronous input processing and output
  And everything will pass through from Session->MenuSystem->Modules
+ Bit of rework on the Menu System, changes passing character_buffer and bools to const references.
+ Added new startupModuleLogon() and moduleInput() for dynamic and asynchronous processing. 

Change Log Update (00.00.15)
* 2016-03-16
+ Moved Menu and Structures to Data Folder
+ Rename MenuData to MenuDao for Data Access Object.
+ Working out how the login process will work from the menu system
- Also need to determine layout for language files, multiple languages / themes.

Change Log Update (00.00.14)
* 2016-03-16
+ Reworking the Menu System and Ironing out the functionality
+ Created executeMenuOptions() to handle processing command keys from input.
+ Setting processMenuOptions() to taken input and pass to execute