@@ -1,7 +1,7 @@
 #include "ansi_processor.hpp"
 #include "common_io.hpp"
 
-#include "data/structures.hpp"
+#include "model/structures.hpp"
 
 #include <cstdio>
 #include <cstdlib>
